# Medical-Assistant

./: README.md  pyproject.toml  setup.py  template.py
research/: trials.ipynb
