[project]
name = "medical_assistant"
version = "0.1.0"
description = "A simple Python project using Langchain and Flask"
authors = [
    { name="ALIMI Oluwatunmise", email="oluwatunmisealimi67@gmail.com" }
]
dependencies = [
    "sentence-transformers==2.2.2",
    "langchain",
    "flask",
    "pypdf",
    "python-dotenv",
    "pinecone[grpc]",
    "langchain-pinecone",
    "langchain_community",
    "langchain_openai",
    "langchain_experimental"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
